--- a/.github/workflows/workflow.cleanup.terraform.yml
+++ b/.github/workflows/workflow.cleanup.terraform.yml
@@ -10,7 +10,7 @@ on: # yamllint disable-line rule:truthy
       keyVaultName:
         description: "Environment Key Vault Name"
         required: true
-        default: "kv-symphony-environments"
+        default: "kv-jjizaeqd-432"
       terraformVersion:
         type: string
         required: true
