--- a/.github/workflows/workflow.destroy.terraform.yml
+++ b/.github/workflows/workflow.destroy.terraform.yml
@@ -18,7 +18,7 @@ on: # yamllint disable-line rule:truthy
       keyVaultName:
         description: "Environment Key Vault Name"
         required: true
-        default: "kv-symphony-environments"
+        default: "kv-jjizaeqd-432"
 
 jobs:
   Destroy:
